--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "pandas>=2.2.3",
+    "plotly>=6.0.1",
     "pyarrow>=19.0.1",
     "requests>=2.32.3",
     "streamlit>=1.44.1",
