--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "pandas>=2.2.3",
     "plotly>=6.0.1",
     "pyarrow>=19.0.1",
+    "pydantic>=2.11.3",
     "requests>=2.32.3",
     "streamlit>=1.44.1",
 ]
