--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "gurobipy>=12.0.1",
     "pandas>=2.2.3",
     "plotly>=6.0.1",
     "pyarrow>=19.0.1",
