--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "gurobipy>=12.0.1",
+    "networkx>=3.4.2",
     "pandas>=2.2.3",
     "plotly>=6.0.1",
     "pyarrow>=19.0.1",
